discussion/kv_engine/180444/180444_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52676: Make ItemEviction responsible for eviction decision

Makes ItemEviction manage MFU and age thresholds used to decide which
items should be evicted (ideally the "coldest" items).

Also separates out a minimal interface in preparation for an
alternative implementation, relying on "up front" MFU tracking.

Change-Id: I74ed398919225c18f04a6300feefba21d704d4c1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-09-29 13:38:12.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-29 13:47:13.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20777/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.cc:44:65: error: expected expression [clang-diagnostic-error]
    const bool belowMFUThreshold = freq <= freqCounterThreshold;]
                                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.cc:58:34: error: use of undeclared identifier "meetsAgeRequirements" [clang-diagnostic-error]
    return belowMFUThreshold && (meetsAgeRequirements || isReplica);
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.cc:100:20: error: out-of-line definition of "afterVisit" does not match any declaration in "ItemEviction" [clang-diagnostic-error]
void ItemEviction::afterVisit(vbucket_state_t state) {
                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20777/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20777/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49823/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/item_eviction.cc(44): error C2059: syntax error: "]" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49823/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41872/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41872/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10490/ : FAILURE

Compile error at [2022-09-29T13:39:57.605Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10490/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10590/ : FAILURE

Compile error at [2022-09-29T13:44:17.432Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected primary-expression before ?]? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10590/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22761/ : FAILURE

Compile error at [2022-09-29T13:44:10.968Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected primary-expression before ?]? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22761/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22161/ : FAILURE

Compile error at [2022-09-29T13:42:26.390Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22161/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23156/ : FAILURE

Compile error at [2022-09-29T13:42:31.684Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected primary-expression before ?]? token
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23156/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23985/ : FAILURE

Compile error at [2022-09-29T13:42:27.623Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23985/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31169/ : FAILURE

Compile error at [2022-09-29T13:44:56.686Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/item_eviction.cc:44:65:
error: expected expression
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31169/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20007/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
